# uni-proxy-manager

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  docker-compose.analytics.yml  docker-compose.example.yml  docker-compose.pomerium.yml  docker-compose.sites.yml  docker-compose.yml  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  run-tests.sh  run-visual.sh  setup-analytics.ps1  test.out.txt  tsconfig.json  turbo.json  vitest.config.e2e-real.ts  vitest.config.integration.ts  vitest.config.ts  vitest.config.unit.ts
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
apps/analytics/: Dockerfile  package.json  tsconfig.json
apps/analytics-workers/: Dockerfile  package.json  tsconfig.json
apps/api/: Dockerfile  package.json
apps/pomerium-workers/: Dockerfile  package.json
apps/sites-lookup/: Cargo.toml  Dockerfile
apps/sites-lookup/src/: analytics.rs  cache.rs  db.rs  main.rs  proxy.rs  routes.rs
apps/sites-workers/: Dockerfile  package.json
apps/web/: Dockerfile  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts
apps/workers/: Dockerfile  package.json
deployments/: .env.example  .gitignore  backup.sh  docker-compose.build.yml  docker-compose.local-storage.yml  docker-compose.yml  init.sh  restore.sh
docker/: docker-compose.test.yml  docker-compose.visual-test.yml  haproxy-dashboard.cfg
docs/: BOT_FILTERING.md  BOT_FILTERING_FLOW.md  FRONTEND_BOT_SETTINGS_EXAMPLE.tsx
scripts/: seed-visual-test.ts  test-integration.sh  visual-test-start.sh  visual-test-stop.sh
(+418 files in other folders)
